--- a/resume.tex
+++ b/resume.tex
@@ -1,53 +1,59 @@
 % !TEX program = xelatex
-
+ 
 \documentclass{resume}
+\usepackage{changepage}
 %\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
-
+ 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
-
-\name{Bin Yuan}
-
+ 
+\name{Mayur Kadam}
+ 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{mayurkadam2157@gmail.com} \textperiodcentered\ 
+  \phone{(+91) 7887331600} \textperiodcentered\ 
+  \linkedin[mayur-kadam]{https://www.linkedin.com/in/mayur-kadam-63bb95204}}
+ 
+\section{\faGraduationCap\ Career Objective}
+\textit To be a part of an organization where I will be able to use and enhance my technical and professional skills to solve real time complex problems of customers and organization. 
 
+ 
+ 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{ Smt. Kashibai Navale College Of Engineering }, Pune , India}{2018 -- 2022}
+\textit{Bachelors} in Computer Science and Engineering (CSE) \hfill cgpa - 8.84
 
+ 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+ 
+\datedsubsection{\textbf{Persistent Systems}, Pune, India}{June 2022 -- Present}
+ 
+\begin{adjustwidth}{0.75cm}{0pt} % Indentation of 1cm
+\subsubsection*{\textbf{Software Engineer}}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+  \item \textbf{ Constellation Brands } 
+  \begin{itemize}
+   \item A premium portfolio of iconic brands, including Ruffino Lumina,Meiomi,mount veeder winery,Modelo Especial, The Prisoner, SVEDKA Vodka and High West Whiskey and many more. They plan to move their existing websites to Shopify Platform.
+   \item Our team was technical partners to Constellation Brands and we handle the website migration and perform the GTM Tagging activities with different vendors.
+   \item Created POC in Shopify Metaobject and Shopify Language Switcher.\\
+   \item \textbf{ Technology }- Shopify, Liquid, Tailwind, Jquery.
+ \end{itemize}
+ 
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
-\begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
-\end{itemize}
+\datedsubsection{\textbf{Software Engineer Intern}}{Jan. 2022 -- June. 2022}
 
+\item \textbf{ Technology }- Html,Css,Javascript,React.js,Node.js
+\item  
+\begin{itemize}
+  \item Used react.js and node.js for creating full-stack mini project.
+  \item Worked on mini project's management systems and its modules like billing module, users, reception system.
+\end{itemize}
+ 
+ 
+\end{adjustwidth}
+
+ 
 % Reference Test
 %\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
 %An xxx optimized for xxx\cite{verma2015large}
@@ -55,24 +61,38 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %  \item main contribution
 %\end{itemize}
 
+% \section{Skills}
+% \begin{itemize}[parsep=0.5ex]
+%   \item Programming Languages: C/C++, Python, JavaScript, Java
+%   \item Web Technologies: HTML, CSS, JavaScript, React, Django, Spring Boot
+%   \item Other: MySql, Git, Github, Jira, Tibco BWCE, Dell Boomi
+% \end{itemize}
+ 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
-  \item Platform: Linux
-  \item Development: Web, xxx
+  \item Programming Languages: C/C++, Java
+  \item Web Technologies: HTML, CSS, Tailwind,Javascript,  React.js, Liquid, Node.js
+  \item Other: Git, Github, Jira, Postman
+  \item Platform: windows
 \end{itemize}
-
+ 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+\datedline{\textit{{}}High Five - Team Awards (Persistent Systems)} {OCT. 2023}
+- For being sensetive to the customer's business urgency and completing the cookie assessment task quickly.
 
+ 
+\section{\faGraduationCap\ Certifications}
+\begin{itemize}[parsep=0.5ex]
+    \item \datedline{Microsoft : Azure Data Fundamentals DP-900}
+{May 2023}
+\end{itemize}
+ 
+ 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
-  \item Languages: English - Fluent, Mandarin - Native speaker
+  \item GitHub: https://github.com/mayur2000-tech
 \end{itemize}
-
+ 
 %% Reference
 %\newpage
 %\bibliographystyle{IEEETran}
